# hello-bit

./: .gitignore  Cargo.toml  Embed.toml  README.md  derp.toml  dummy.rs  flake.nix  reset-ble.sh
.cargo/: config.toml
.helix/: languages.toml
asdp/: dummy.rs  hal.rs
async-blink/: Cargo.toml
async-blink/examples/: dummy.rs
ble/bas_peripheral/: Cargo.toml
ble/bas_peripheral/examples/: dummy.rs
ble/bas_peripheral/src/: main.rs
blinky/: Cargo.toml
blinky/src/: main.rs
examples/: async.rs  bsp.rs  dummy.rs  hal.rs  hello.rs  pac.rs  unsafe.rs
raw/: Cargo.toml
raw/src/: main.rs
simple/: Cargo.toml  memory.x
simple/src/: main.rs
src/: main.rs
thermostat/: Cargo.toml
thermostat/src/: ble.rs  lib.rs  main.rs  pid.rs
workspace-hack/: Cargo.toml
