[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.4"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.5.0", features = ["executor-thread", "arch-cortex-m", "integrated-timers"] }
embassy-futures = "0.1.1"
embassy-nrf = "0.1.0"
embassy-sync = "0.5.0"
embassy-time = "0.3.0"
microbit-bsp = "0.3.0"
micromath = "2.1.0"
panic-probe = "0.3.2"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
