[package]
name = "raw"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.4"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
micromath = "2.1.0"
panic-probe = "0.3.2"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
