[package]
name = "thermostat"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-futures = { version = "0.1", default-features = false }
embassy-executor = { version = "0.5", default-features = false, features = ["integrated-timers", "defmt", "arch-cortex-m", "executor-thread", "executor-interrupt", "task-arena-size-32768"] }
embassy-time = { version = "0.3", default-features = false, features = ["defmt-timestamp-uptime", "defmt"] }

cortex-m-rt = "0.7"
cortex-m = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
microbit-bsp = "0.3.0"
nalgebra = { version = "0.32.5", default-features = false, features = ["macros"] }
embassy-sync = "0.5.0"
heapless = { version = "0.8.0", features = ["ufmt"] }
ufmt = "0.2.0"

nrf-softdevice = { version = "0.1.0", features = ["ble-peripheral", "ble-gatt-server", "s113", "nrf52833", "critical-section-impl", "defmt"] }
nrf-softdevice-s113 = { version = "0.1.0" }
static_cell = "2.1.0"

[patch.crates-io]
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "b193eaa1718aeadd3b5eca54f1784aeceba75385" }
nrf-softdevice-s113 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "b193eaa1718aeadd3b5eca54f1784aeceba75385" }
